# cheatshh

./: .gitignore  MANIFEST.in  Pypi_README.md  README.md  cheats.sh  commands.json  groups.json  pyproject.toml  requirements.txt  setup.py  tldr.md
cheatshh/: cheats.sh  cheatshh.toml  commands.json  config.toml  groups.json  main.py
docs/: README.md  cheatshh_configurations.md  man.1
docs/man/: cheatshh.1
docs/tldr/: cheatshh.md
