[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cheatshh"
version = "1.1.1"
description = "Interactive CLI for managing command line cheatsheets, written in shell script."
authors = [{ name = "Anirudh Gupta" }]
requires-python = "~=3.9"
readme = "Pypi_README.md"
keywords = [
    "cheatsheet",
    "cheat",
    "command-line",
    "CLI",
    "shell-script",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: System :: Shells",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
]
dependencies = [
    "fuzzyfinder>=2.2.0",
    "fzf-bin>=0.55.0",
    "setuptools>=80.9.0",
    "whiptail>=0.2",
]

[project.urls]
Homepage = "https://github.com/AnirudhG07/cheatshh"

[project.scripts]
cheatshh = "cheatshh.main:main"

[dependency-groups]
dev = []
